[gd_scene load_steps=11 format=3 uid="uid://prac2vrlm0hl"]

[ext_resource type="Script" path="res://dungeons/door_locker.gd" id="1_h70lt"]
[ext_resource type="Script" path="res://dungeons/dungeon_room_base.gd" id="1_jke51"]
[ext_resource type="MeshLibrary" uid="uid://klt1tp7bm4uy" path="res://world/dungeoning/mesh_library.tres" id="1_s3kj2"]
[ext_resource type="Script" uid="uid://dudjhjfe2fnxe" path="res://dungeons/enemy_spawner.gd" id="2_n441i"]
[ext_resource type="PackedScene" uid="uid://b0ixsh05l7uxe" path="res://actors/atrezzo/door.tscn" id="2_wtwam"]
[ext_resource type="PackedScene" uid="uid://xywwgpjc3fuw" path="res://actors/enemies/slime/slime.tscn" id="3_b806f"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_b806f"]
points = PackedVector3Array(-10, -0.25, -10, -10, 0.25, -10, 10, -0.25, -10, -10, -0.25, 10, -10, 0.25, 10, 10, 0.25, -10, 10, -0.25, 10, 10, 0.25, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ptt8e"]
albedo_color = Color(0.541176, 0.717647, 0.533333, 1)

[sub_resource type="BoxMesh" id="BoxMesh_tsucx"]
material = SubResource("StandardMaterial3D_ptt8e")
size = Vector3(20, 0.6, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_jke51"]
size = Vector3(17, 5, 17)

[node name="DungeonRoom1" type="Node3D"]
script = ExtResource("1_jke51")

[node name="DoorLocker" type="Node3D" parent="."]
script = ExtResource("1_h70lt")

[node name="Door" parent="DoorLocker" instance=ExtResource("2_wtwam")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.0872, 0.307209, 1.56542)

[node name="Door2" parent="DoorLocker" instance=ExtResource("2_wtwam")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.175098, 0.307209, -10.0001)

[node name="Door3" parent="DoorLocker" instance=ExtResource("2_wtwam")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.2097, 0.307205, -0.00909507)

[node name="Door4" parent="DoorLocker" instance=ExtResource("2_wtwam")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.190556, 0.307207, 9.43348)

[node name="WorldBounds" type="StaticBody3D" parent="."]
collision_mask = 0

[node name="CollisionShape3D2" type="CollisionShape3D" parent="WorldBounds"]
shape = SubResource("ConvexPolygonShape3D_b806f")

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldBounds"]
mesh = SubResource("BoxMesh_tsucx")
skeleton = NodePath("../..")

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("1_s3kj2")
cell_size = Vector3(0.5, 0.5, 0.5)
data = {
"cells": PackedInt32Array(65507, 65512, 0, 65508, 65514, 0, 65508, 65515, 0, 65509, 65518, 0, 65510, 65519, 0, 65510, 65520, 0, 65511, 65521, 0, 65512, 65523, 0, 65512, 65524, 0, 65509, 65515, 0, 65510, 65515, 0, 65511, 65515, 0, 65512, 65516, 0, 65513, 65515, 0, 65513, 65516, 0, 65515, 65517, 0, 65516, 65518, 0, 65517, 65518, 0, 65518, 65519, 0, 65520, 65519, 0, 65521, 65519, 0, 65522, 65519, 0, 65522, 65510, 0, 65521, 65510, 0, 65522, 65512, 0, 65523, 65512, 0, 65523, 65513, 0, 65523, 65515, 0, 65524, 65516, 0, 65525, 65519, 0, 65525, 65521, 0, 65526, 65522, 0, 65526, 65523, 0, 65526, 65524, 0, 65526, 65525, 0, 65526, 65526, 0, 65531, 65510, 0, 65531, 65511, 0, 65532, 65512, 0, 65533, 65514, 0, 65534, 65516, 0, 65535, 65518, 0, 0, 65520, 0, 1, 65523, 0, 1, 65525, 0, 1, 65526, 0, 65524, 10, 0, 65524, 11, 0, 65525, 12, 0, 65525, 14, 0, 65525, 16, 0, 65525, 18, 0, 65525, 21, 0, 65525, 23, 0, 65525, 24, 0, 65525, 26, 0, 65524, 26, 0, 65524, 25, 0, 65524, 24, 0, 65523, 23, 0, 65522, 22, 0, 65522, 21, 0, 65526, 13, 0, 65527, 14, 0, 65528, 16, 0, 65530, 19, 0, 65531, 21, 0, 65532, 22, 0, 65533, 23, 0, 65533, 24, 0, 65534, 25, 0, 65534, 26, 0, 65526, 22, 0, 65527, 22, 0, 65527, 21, 0, 65528, 21, 0, 65529, 21, 0, 65530, 21, 0, 65530, 20, 0, 65531, 20, 0, 65535, 10, 0, 65535, 11, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 1, 15, 0, 2, 17, 0, 2, 19, 0, 3, 20, 0, 4, 21, 0, 5, 20, 0, 6, 20, 0, 7, 20, 0, 8, 19, 0, 10, 19, 0, 11, 19, 0, 12, 19, 0, 10, 7, 0, 11, 8, 0, 11, 9, 0, 12, 10, 0, 12, 11, 0, 13, 12, 0, 14, 13, 0, 14, 14, 0, 15, 15, 0, 15, 16, 0, 16, 16, 0, 16, 15, 0, 17, 15, 0, 18, 15, 0, 19, 14, 0, 21, 13, 0, 21, 12, 0, 2, 30, 1, 1, 30, 1, 0, 31, 0, 65535, 31, 1, 65534, 32, 0, 65533, 34, 0, 65533, 35, 0, 65533, 36, 0, 65533, 37, 0, 65534, 37, 0, 65534, 38, 0, 65535, 38, 0, 0, 38, 1, 1, 38, 1, 2, 38, 0, 3, 37, 0, 4, 37, 0, 5, 36, 0, 6, 35, 0, 8, 34, 0, 9, 34, 0, 8, 33, 0, 7, 33, 0, 6, 33, 0, 6, 34, 0, 5, 34, 0, 4, 34, 0, 4, 35, 0, 3, 35, 0, 2, 35, 0, 1, 35, 0, 8, 28, 0, 8, 29, 0, 8, 30, 0, 9, 30, 0, 9, 31, 0, 10, 31, 0, 10, 32, 0, 11, 32, 0, 12, 32, 0, 13, 32, 0, 14, 31, 0, 14, 30, 0, 14, 29, 0, 13, 29, 0, 13, 28, 0, 13, 27, 0, 12, 27, 0, 11, 27, 0, 10, 27, 0, 9, 27, 0, 9, 28, 0, 18, 22, 0, 18, 23, 0, 17, 23, 0, 17, 24, 0, 17, 25, 0, 17, 26, 0, 17, 27, 0, 18, 28, 0, 18, 29, 0, 19, 29, 0, 19, 28, 0, 20, 28, 0, 21, 27, 0, 22, 27, 0, 22, 26, 0, 23, 25, 0, 23, 24, 0, 23, 23, 0, 22, 23, 0, 21, 22, 0, 20, 22, 0, 19, 22, 0, 17, 22, 0, 27, 16, 0, 27, 17, 0, 28, 17, 0, 28, 18, 0, 29, 18, 0, 29, 19, 0, 29, 20, 0, 30, 21, 0, 30, 22, 0, 30, 23, 0, 28, 19, 0, 27, 15, 0, 26, 13, 0, 26, 12, 0, 26, 11, 0, 27, 10, 0, 28, 10, 0, 29, 11, 0, 30, 11, 0, 31, 12, 0, 32, 12, 0, 34, 12, 0, 35, 13, 0, 35, 14, 0, 35, 15, 0, 36, 16, 0, 36, 17, 0, 36, 18, 0, 35, 19, 0, 35, 20, 0, 34, 20, 0, 34, 21, 0, 33, 21, 0, 32, 22, 0, 31, 22, 0, 37, 5, 0, 38, 5, 0, 38, 4, 0, 39, 4, 0, 40, 3, 0, 41, 3, 0, 41, 4, 0, 42, 5, 0, 42, 6, 0, 42, 7, 0, 42, 8, 0, 42, 9, 0, 41, 9, 0, 41, 10, 0, 41, 11, 0, 41, 12, 0, 40, 12, 0, 40, 13, 0, 41, 17, 0, 19, 65515, 0, 19, 65516, 0, 19, 65517, 0, 19, 65518, 0, 19, 65519, 0, 19, 65520, 0, 19, 65521, 0, 19, 65522, 0, 19, 65523, 0, 19, 65524, 0, 19, 65525, 0, 19, 65526, 0, 19, 65527, 0, 19, 65528, 0, 19, 65529, 0, 19, 65530, 0, 19, 65531, 0, 19, 65532, 0, 19, 65533, 0, 19, 65534, 0, 19, 2, 0, 19, 3, 0, 19, 4, 0, 19, 5, 0, 19, 6, 0, 19, 7, 0, 19, 8, 0, 19, 9, 0, 19, 10, 0, 19, 11, 0, 19, 12, 0, 19, 13, 0, 19, 15, 0, 19, 16, 0, 19, 17, 0, 19, 18, 0, 19, 19, 0, 20, 65515, 0, 20, 65516, 0, 20, 65517, 0, 20, 65518, 0, 20, 65519, 0, 20, 65520, 0, 20, 65521, 0, 20, 65522, 0, 20, 65523, 0, 20, 65524, 0, 20, 65525, 0, 20, 65526, 0, 20, 65527, 0, 20, 65528, 0, 20, 65529, 0, 20, 65530, 0, 20, 65531, 0, 20, 65532, 0, 20, 65533, 0, 20, 65534, 0, 20, 1, 0, 20, 2, 0, 20, 3, 0, 20, 4, 0, 20, 5, 0, 20, 6, 0, 20, 7, 0, 20, 8, 0, 20, 9, 0, 20, 10, 0, 20, 11, 0, 20, 12, 0, 20, 13, 0, 20, 14, 0, 20, 15, 0, 20, 16, 0, 20, 17, 0, 20, 18, 0, 20, 19, 0, 65515, 18, 0, 65515, 19, 0, 65516, 18, 0, 65516, 19, 0, 65517, 18, 0, 65517, 19, 0, 65518, 18, 0, 65518, 19, 0, 65519, 18, 0, 65519, 19, 0, 65520, 18, 0, 65520, 19, 0, 65521, 18, 0, 65521, 19, 0, 65522, 18, 0, 65522, 19, 0, 65523, 18, 0, 65523, 19, 0, 65524, 18, 0, 65524, 19, 0, 65525, 19, 0, 65526, 18, 0, 65526, 19, 0, 65527, 18, 0, 65527, 19, 0, 65528, 18, 0, 65528, 19, 0, 65529, 18, 0, 65529, 19, 0, 65530, 18, 0, 65531, 18, 0, 65531, 19, 0, 65532, 18, 0, 65532, 19, 0, 65533, 18, 0, 65533, 19, 0, 65534, 18, 0, 65534, 19, 1179649, 2, 18, 0, 3, 18, 0, 3, 19, 0, 4, 18, 0, 4, 19, 0, 5, 18, 0, 5, 19, 0, 6, 18, 0, 6, 19, 0, 7, 18, 0, 7, 19, 0, 8, 18, 0, 9, 18, 0, 9, 19, 0, 10, 18, 0, 11, 18, 0, 12, 18, 0, 13, 18, 0, 13, 19, 0, 14, 18, 0, 14, 19, 0, 15, 18, 0, 15, 19, 0, 16, 18, 0, 16, 19, 0, 17, 18, 0, 17, 19, 0, 18, 18, 0, 18, 19, 0, 65515, 65514, 0, 65515, 65515, 0, 65515, 65516, 0, 65515, 65518, 0, 65515, 65519, 0, 65515, 65520, 0, 65515, 65521, 0, 65515, 65522, 0, 65515, 65523, 0, 65515, 65524, 0, 65515, 65525, 0, 65515, 65526, 0, 65515, 65527, 0, 65515, 65528, 0, 65515, 65529, 0, 65515, 65530, 0, 65515, 65531, 0, 65515, 65532, 0, 65515, 65533, 0, 65515, 65534, 0, 65515, 65535, 0, 65515, 0, 0, 65515, 1, 1, 65515, 4, 1, 65515, 5, 0, 65515, 6, 0, 65515, 7, 0, 65515, 8, 0, 65515, 9, 0, 65515, 10, 0, 65515, 11, 0, 65515, 12, 0, 65515, 13, 0, 65515, 14, 0, 65515, 15, 0, 65515, 16, 0, 65515, 17, 0, 65516, 65514, 0, 65516, 65515, 0, 65516, 65516, 0, 65516, 65517, 0, 65516, 65519, 0, 65516, 65520, 0, 65516, 65521, 0, 65516, 65522, 0, 65516, 65523, 0, 65516, 65524, 0, 65516, 65525, 0, 65516, 65526, 0, 65516, 65527, 0, 65516, 65528, 0, 65516, 65529, 0, 65516, 65530, 0, 65516, 65531, 0, 65516, 65532, 0, 65516, 65533, 0, 65516, 65534, 0, 65516, 65535, 0, 65516, 0, 0, 65516, 1, 0, 2, 65515, 0, 2, 65516, 0, 3, 65515, 0, 3, 65516, 0, 4, 65515, 0, 4, 65516, 0, 5, 65515, 0, 5, 65516, 0, 6, 65515, 0, 6, 65516, 0, 7, 65515, 0, 7, 65516, 0, 8, 65515, 0, 8, 65516, 0, 9, 65515, 0, 9, 65516, 0, 10, 65515, 0, 10, 65516, 0, 11, 65515, 0, 11, 65516, 0, 12, 65515, 0, 12, 65516, 0, 13, 65515, 0, 13, 65516, 0, 14, 65515, 0, 14, 65516, 0, 15, 65515, 0, 15, 65516, 0, 16, 65515, 0, 16, 65516, 0, 17, 65515, 0, 17, 65516, 0, 18, 65515, 0, 18, 65516, 0, 65517, 65515, 0, 65517, 65516, 0, 65518, 65515, 0, 65518, 65516, 0, 65519, 65515, 0, 65519, 65516, 0, 65520, 65515, 0, 65520, 65516, 0, 65521, 65515, 0, 65521, 65516, 0, 65522, 65515, 0, 65522, 65516, 0, 65523, 65516, 0, 65524, 65515, 0, 65525, 65515, 0, 65525, 65516, 0, 65526, 65515, 0, 65526, 65516, 0, 65527, 65515, 0, 65527, 65516, 0, 65528, 65515, 0, 65528, 65516, 0, 65529, 65515, 0, 65529, 65516, 0, 65530, 65515, 0, 65530, 65516, 0, 65531, 65515, 0, 65531, 65516, 0, 65532, 65515, 0, 65532, 65516, 0, 65533, 65515, 0, 65533, 65516, 0, 0, 65513, 1, 0, 65514, 1, 0, 65515, 1, 65535, 65515, 1, 65534, 65515, 1, 65535, 65514, 1, 65535, 65513, 1, 65535, 65512, 1, 65535, 65511, 1, 65535, 65510, 1, 65535, 65509, 1, 0, 65509, 1, 0, 65508, 1, 0, 65510, 1, 0, 65511, 1, 0, 65512, 1, 1, 65513, 1, 1, 65514, 1, 1, 65515, 1, 1, 65516, 1, 0, 65516, 1, 1, 65512, 1, 1, 65511, 1, 1, 65510, 1, 1, 65509, 1, 2, 65509, 1, 1, 65508, 1, 2, 65508, 1, 2, 65507, 1, 1, 65507, 1, 1, 65506, 1, 0, 65506, 1, 65535, 65506, 1, 65535, 65505, 1, 65535, 65504, 1, 65535, 65503, 1, 65535, 65502, 1, 0, 65502, 1, 1, 65502, 1, 1, 65503, 1, 1, 65504, 1, 1, 65505, 1, 0, 65507, 1, 65535, 65507, 1, 65535, 65508, 1, 0, 65505, 1, 0, 65504, 1, 2, 65503, 1, 2, 65502, 1, 3, 65502, 1, 3, 65501, 1, 2, 65501, 1, 1, 65501, 1, 65515, 3, 1, 65514, 3, 1, 65514, 2, 1, 65513, 2, 1, 65512, 2, 1, 65511, 2, 1, 65510, 2, 1, 65513, 1, 1, 65514, 1, 1, 65515, 2, 1, 65514, 4, 1, 65513, 4, 1, 65512, 4, 1, 65511, 3, 1, 65510, 3, 1, 65509, 3, 1, 65509, 2, 1, 65508, 3, 1, 65508, 2, 1, 65508, 1, 1, 65507, 1, 1, 65507, 0, 1, 65506, 0, 1, 65505, 1, 1, 65504, 1, 1, 65503, 1, 1, 65503, 2, 1, 65503, 3, 1, 65503, 4, 1, 65502, 4, 1, 65502, 3, 1, 65504, 3, 1, 65504, 2, 1, 65505, 2, 1, 65506, 2, 1, 65505, 3, 1, 65501, 4, 1, 65500, 4, 1, 65499, 4, 1, 65499, 5, 1, 65498, 5, 1, 65498, 4, 1, 65498, 3, 1, 65499, 3, 1, 65500, 3, 1, 65501, 3, 1, 65501, 2, 1, 65502, 2, 1, 19, 0, 1, 20, 0, 1, 20, 65535, 1, 21, 65535, 1, 22, 65534, 1, 23, 65534, 1, 24, 65534, 1, 25, 65534, 1, 26, 65534, 1, 27, 65534, 1, 28, 65535, 1, 29, 65535, 1, 29, 0, 1, 28, 0, 1, 27, 0, 1, 26, 1, 1, 25, 1, 1, 24, 1, 1, 24, 0, 1, 23, 0, 1, 22, 0, 1, 21, 0, 1, 23, 65535, 1, 24, 65535, 1, 25, 65535, 1, 26, 65535, 1, 27, 65535, 1, 30, 65535, 1, 31, 65535, 1, 32, 65535, 1, 33, 65535, 1, 33, 65534, 1, 34, 65535, 1, 34, 65534, 1, 0, 19, 1, 0, 20, 1, 1, 21, 1, 1, 22, 1, 1, 23, 1, 2, 23, 1, 2, 24, 1, 2, 25, 1, 2, 26, 1, 2, 27, 1, 2, 28, 1, 2, 29, 1, 2, 31, 1, 2, 32, 1, 1, 32, 1, 1, 33, 1, 1, 34, 1, 2, 34, 1, 1, 31, 1, 1, 29, 1, 0, 28, 1, 0, 27, 1, 0, 26, 1, 0, 25, 1, 0, 24, 1, 0, 23, 1, 0, 22, 1, 0, 21, 1, 65535, 21, 1, 65535, 22, 1, 65535, 23, 1, 65535, 24, 1, 65535, 25, 1, 65535, 26, 1, 65535, 27, 1, 65535, 28, 1, 65535, 29, 1, 65535, 30, 1, 65535, 32, 1, 65535, 33, 1, 0, 34, 1, 0, 35, 1, 0, 36, 1, 0, 37, 1, 1, 39, 1, 1, 40, 1, 1, 41, 1, 0, 40, 1, 0, 39, 1, 1, 20, 1, 1, 19, 1)
}

[node name="EnemySpawner" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.51221, 0)
script = ExtResource("2_n441i")
spawnable_enemies = Array[PackedScene]([ExtResource("3_b806f")])
num_spawns = 3

[node name="InDungeonSensor" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="InDungeonSensor"]
shape = SubResource("BoxShape3D_jke51")
